feat(Style): Added Tox tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,13 @@
 [metadata]
-description-file = README.md
+description_file = README.md
 
+[mypy]
+python_version = 3.7
+strict = true
+show_error_codes = true
+follow_imports = silent
+ignore_missing_imports = true
+allow_any_generics = true
+warn_return_any = false
+warn_unreachable = true
+exclude = venv/*
